Changed the height of slideshow on mobile and pc to ensure less images is cropped out

--- a/src/assets/css/home/slideshow-mobile.css
+++ b/src/assets/css/home/slideshow-mobile.css
@@ -1,7 +1,7 @@
 @media (max-width: 768px) {
 
   .image-container {
-    height: 400px;
+    height: 300px;
   }
 
   #waves {
