--- a/src/assets/css/home/slideshow.css
+++ b/src/assets/css/home/slideshow.css
@@ -1,5 +1,5 @@
 .image-container {
-  height: 600px;
+  height: 800px;
   position: relative;
   overflow: hidden;
   display: flex;
